# FlashDuck

./: .replit  README.md  app.py  dump.rdb  pyproject.toml  replit.md  requirements.txt  setup.py  start_demo.py
attached_assets/: Pasted--Unverified-Got-it-Mzee-I-ve-updated-the-plan-to-use-a-single-consolidated-Parquet-written-by-a--1755775554427_1755775554428.txt
duckredis/: __init__.py  cache.py  cli.py  config.py  core.py  file_monitor.py  parquet_writer.py  query.py  utils.py
example/: app.py
example/.streamlit/: config.toml
example/shared_db/: .gitkeep  default_table.parquet  manual_test.parquet  orders.json  orders.parquet  products.json  products.parquet  users.json  users.parquet  users_batch_10_2025-08-21-17-15-14-286.parquet  users_batch_10_2025-08-21-17-15-15-567.parquet  users_batch_11_2025-08-21-17-15-19-295.parquet  users_batch_11_2025-08-21-17-15-20-577.parquet  users_batch_12_2025-08-21-17-15-24-303.parquet  users_batch_12_2025-08-21-17-15-25-584.parquet  users_batch_13_2025-08-21-17-15-29-314.parquet  users_batch_13_2025-08-21-17-15-30-599.parquet  users_batch_14_2025-08-21-17-15-34-322.parquet  users_batch_14_2025-08-21-17-15-35-620.parquet  users_batch_15_2025-08-21-17-15-39-331.parquet  users_batch_15_2025-08-21-17-15-40-630.parquet  users_batch_16_2025-08-21-17-15-44-341.parquet  users_batch_16_2025-08-21-17-15-45-639.parquet  (+77 more)
flashduck/: __init__.py  cache.py  cli.py  config.py  core.py  duckdb_cache.py  file_monitor.py  parquet_writer.py  query.py  utils.py
shared_db/: .gitkeep
tests/: test_acid_concurrency.py  test_utils.py
