[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.8"
dependencies = [
    "duckdb>=1.0,<1.1",
    "pandas>=2.0,<2.1",
    "plotly>=5.0.0",
    "pyarrow>=8.0.0",
    "setuptools>=65.0",
    "streamlit>=1.28.0",
    "watchdog>=2.1.0",
    "pyyaml>=6.0",
]
